--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
 
 /* Navbar styles */
 .navbar {
-    background-color: #333;
+    background-color: hsl(0, 0%, 0%);
     padding: 10px 0;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     position: sticky;
@@ -20,7 +20,7 @@ body {
     margin: 0;
     padding: 0;
     display: flex;
-    justify-content: center;
+    justify-content: start;
 }
 
 .navbar ul li {
@@ -38,7 +38,9 @@ body {
 }
 
 .navbar ul li a:hover {
-    color: #04AA6D;
+    color: #FF4655;
+    background-color: hsl(0, 1%, 30%);
+    border-radius: 4px;
 }
 
 /* Dropdown menu */
@@ -59,7 +61,7 @@ body {
 }
 
 .navbar ul li .dropdown a:hover {
-    background-color: #04AA6D;
+    background-color: #575757;
     color: white;
 }
 
@@ -96,11 +98,16 @@ body {
 }
 
 .main-content h1 {
-    font-size: 2.5rem;
+    font-size: 20px;
     color: #333;
 }
 
 .main-content p {
     color: #666;
     font-size: 1.1rem;
+}
+
+img {
+    width: 25%;
+    height: auto;
 }
