--- a/style.css
+++ b/style.css
@@ -4,6 +4,18 @@ body {
     padding: 0;
 }
 
+#bvideo {
+    align-content: center;
+    position: fixed;
+    height: auto;
+    right: 0;
+    bottom: 0;
+    min-width: 100%;
+    min-height: 100%;
+    z-index: -1;
+    object-fit: cover;
+}
+
 /* Navbar styles */
 .navbar {
     background-color: hsl(0, 0%, 0%);
@@ -70,7 +82,7 @@ body {
 
 /* Active link styles */
 .navbar ul li a.active {
-    color: #f4efef;
+    color: #04AA6D;
 }
 
 /* Media queries for responsive design */
@@ -98,11 +110,11 @@ body {
 
 .main-content h1 {
     font-size: 20px;
-    color: #333;
+    color: hsl(0, 0%, 100%);
 }
 
 .main-content p {
-    color: #666;
+    color: #6e5f5f;
     font-size: 1.1rem;
 }
 
@@ -110,86 +122,3 @@ img {
     width: 25%;
     height: auto;
 }
-
-/* Agent styles */
-#Agen {
-    background-color: #363535;
-}
-
-.card-container {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    gap: 20px;
-    padding: 20px;
-}
-
-.card {
-    position: relative;
-    overflow: hidden;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    transition: transform 0.3s ease;
-}
-
-.card img {
-    width: 100%;
-    height: auto;
-    filter: grayscale(100%);
-    transition: filter 0.3s ease;
-}
-
-.card-content {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background: rgba(0, 0, 0, 0.7);
-    color: white;
-    padding: 20px;
-    transform: translateY(100%);
-    transition: transform 0.3s ease;
-}
-
-.card:hover {
-    transform: scale(1.05);
-}
-
-.card:hover img {
-    filter: grayscale(0);
-}
-
-.card:hover .card-content {
-    transform: translateY(0);
-}
-
-@media (max-width: 768px) {
-    .card-container {
-        grid-template-columns: 1fr;
-    }
-}
-
-.card img {
-    max-width: 100%; /* Gambar tidak akan melebihi lebar kartu */
-    max-height: 250px; /* Membatasi tinggi maksimal gambar */
-    object-fit: contain; /* Gambar akan menyesuaikan proporsinya tanpa dipotong */
-    filter: grayscale(100%);
-    transition: filter 0.3s ease;
-}
-
-.card {
-    flex-basis: 30%; /* Mengatur lebar card menjadi 30% dari container */
-    margin: 10px;
-    max-width: 100%;
-    box-sizing: border-box;
-}
-
-footer {
-    background-color: black;
-}
-
-.Title {
-    text-align: center;
-    color: black;
-    font-family: Arial, Helvetica, sans-serif;
-}
-
