--- a/style.css
+++ b/style.css
@@ -126,7 +126,14 @@ img {
 /* Agent styles */
 #Agen {
     background-color: #363535;
+    text-align: center;
 }
+
+ h2{
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+}
+
 .card-container {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
@@ -180,7 +187,7 @@ img {
 }
 .card {
     flex-basis: 30%; /* Mengatur lebar card menjadi 30% dari container */
-    margin: 10px;
+    margin:10px;
     max-width: 100%;
     box-sizing: border-box;
 }
