--- a/style.css
+++ b/style.css
@@ -192,3 +192,8 @@ footer {
     color: black;
     font-family: Arial, Helvetica, sans-serif;
 }
+
+h1 {
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    text-align: center;
+}
