--- a/style.css
+++ b/style.css
@@ -129,7 +129,7 @@ img {
     text-align: center;
 }
 
- h2{
+h2{
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
 }
@@ -187,7 +187,7 @@ img {
 }
 .card {
     flex-basis: 30%; /* Mengatur lebar card menjadi 30% dari container */
-    margin:10px;
+    margin: 10px;
     max-width: 100%;
     box-sizing: border-box;
 }
@@ -200,7 +200,20 @@ footer {
     font-family: Arial, Helvetica, sans-serif;
 }
 
-h1 {
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+.Artikel {
+ background-color: #363535;
+}
+
+p {
     text-align: center;
+}
+
+h1 {
+    text-align: center;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+}
+
+h3 {
+    text-align: justify;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
