--- a/style.css
+++ b/style.css
@@ -220,3 +220,49 @@ h3 {
     text-align: justify;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
+
+.Premier p {
+    text-align: justify; 
+    margin-left: auto; 
+    margin-right: auto; 
+    width: 70%;
+}
+
+h3 {
+    font-weight: lighter; 
+    margin-left: auto; 
+    margin-right: auto; 
+    width: 70%;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+}
+
+li {
+    margin-left: auto; 
+    margin-right: auto; 
+    width: 70%;
+    margin-bottom: 10px;
+    text-align: justify;
+}
+
+.li2 {
+    width: 100%; 
+    list-style-type: disc;
+}
+
+.nomer {
+    list-style-type: decimal;
+}
+
+#potoo {
+    margin-left: auto; 
+    margin-right: auto; 
+    width: 70%;
+    margin-bottom: 10px;
+    display: block;
+}
+
+.nomer2 {
+    width: 100%;
+    list-style-type: decimal;
+}
