--- a/style.css
+++ b/style.css
@@ -108,6 +108,17 @@ body {
     text-align: center;
 }
 
+#niko {
+        background-color: #04AA6D; /* Green */
+        border: none;
+        color: white;
+        padding: 15px 32px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 16px;
+}
+
 .main-content h1 {
     font-size: 19px;
     color: hsl(0, 0%, 100%);
@@ -219,4 +230,10 @@ h1 {
 h3 {
     text-align: justify;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+}
+
+/* premier */
+.premier{
+    background-color: cadetblue;
+    
 }
