--- a/style.css
+++ b/style.css
@@ -82,7 +82,7 @@ body {
 
 /* Active link styles */
 .navbar ul li a.active {
-    color: #04AA6D;
+    color: #dfe9e5;
 }
 
 /* Media queries for responsive design */
