--- a/style.css
+++ b/style.css
@@ -321,3 +321,25 @@ li {
 }
 
 /* phone */
+
+.agen-button {
+    
+    background-color: #ff4c4c; /* Red color */
+    color: white; /* White text */
+    padding: 15px 25px; /* Padding to adjust the size */
+    border: 2px solid white; /* White border */
+    border-radius: 5px; /* Rounded corners */
+    font-size: 16px; /* Text size */
+    font-weight: bold; /* Bold text */
+    text-align: center; /* Center the text */
+    text-transform: uppercase; /* Uppercase text */
+    cursor: pointer; /* Pointer cursor on hover */
+    transition: background-color 0.5s ease; /* Transition for hover effect */
+   justify-items: center;/*biar tombol ke tengah */
+   display: -moz-stack;
+}
+.agen-button:hover:hover {
+    background-color: #fff9f9; /*Darker red on hover*/
+    color: black;
+    border: 2px solid rgb(253, 132, 3);
+}
