--- a/style.css
+++ b/style.css
@@ -16,6 +16,11 @@ body {
     object-fit: cover;
 }
 
+.artikel-title a {
+    text-decoration: none;
+    color: #dfe9e5;
+}
+
 /* Navbar styles */
 .navbar {
     background-color: hsl(0, 0%, 0%);
